Fixed bug #74404 (wrong reflection on DateTimeZone::getTransitions)